--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -79,21 +79,12 @@
     color: #4aaaa5;
   }
   
-  
+
   .icon {
       width: 60px;
       height: auto;
       color: none;
       border-right: none;
-  }
-  
-  /* Rotates social icon in contacts on hover. */
-  .icon:hover {
-      transform: rotate(-10deg);
-      -ms-transform: rotate(-10deg);
-      -webkit-transform: rotate(-10deg);
-      -moz-transform: rotate(-10deg);
-      -o-transform: rotate(-10deg);
   }
   
   section	{
@@ -199,16 +190,7 @@
       background-color: #374865;
   }
   
-  #social-links {
-      float: right;
-      padding: 10px;
-      width: 270px;
-      top: 30px;
-      text-align: center;
-      margin-right: 125px;
-      margin-top: 30px
-  }
-  
+  /*Style for main-bio, contact-form and project-portfolio*/
   #main-bio,
   #contact-form,
   #project-portfolio {
@@ -225,12 +207,13 @@
       padding: 20px;
   }
   
+  /*Style for photo- currently blurry*/
   #bio-image {
       clear: both;
       float: left;
       margin-right: 20px;
-      width: 200px;
-      height: 200px;
+      width: 150px;
+      height: 150px;
   }
   
   #contact-form {
